# noise

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  README.md  hinoise.cpp
src/: noise.cpp
