#Author : zTgx
#Date   : 2022-04-08
#Desc   : noise library

cmake_minimum_required (VERSION 3.23)

if (POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif ()

set(PROJECTNAME noise)
project(${PROJECTNAME})

# set(CMAKE_CXX_COMPILER_ID "GNU")
# set(CMAKE_CXX_COMPILER_VERSION "11.1.0")
set(CMAKE_CXX_COMPILER "/usr/bin/g++-11")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")
set(CMAKE_CXX_FLAGSD "${CMAKE_CXX_FLAGS} -O0 -Wall -g -ggdb")

aux_source_directory(src DIR_MAIN_SRCS)
add_library(${PROJECTNAME} ${DIR_MAIN_SRCS})
